SERVER-80720 Ignore duplicated 'background' field in index spec (#25308)

GitOrigin-RevId: c1723c716b9ba125515ff5b3a841496300c88a7e